<resources>
    <string name="app_name">MKGiF</string>
    <string name="action_settings">Settings</string>
    <string name="filmy">Filmy</string>
    <string name="gry">Gry</string>
    <string name="książki">ksi¹¿ki</string>
    <string name="Dodaj">Dodaj</string>
    <string name="login">Login:</string>
    <string-array name="types">
        <item>Gra</item>
        <item>Książka</item>
        <item>Film</item>
    </string-array>
    <string-array name="status">
        <item>W przyszłości</item>
        <item>W trakcie</item>
        <item>Skończone</item>
        <item>Przerwane</item>
    </string-array>
    <string name="title_activity_log_in2">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="data">Data</string>
    <string name="example">example</string>
    <string name="tytul">Tytuł:</string>
    <string name="has_o">Hasło:</string>
    <string name="zaloguj">Zaloguj</string>
    <string name="rejestracja">Rejestracja</string>
    <string name="studio">Studio:</string>
    <string name="date">Data produkcji:</string>
    <string name="brand">Gatunek:</string>
    <string name="date_hint">RRRR/MM/DD</string>
    <string name="Author">Autor:</string>
    <string name="Director">Reżyser:</string>
    <string name="date_book">Data wydania:</string>
    <string name="dialog_remove_item_message">Czy na pewno chcesz usnąć ten wpis?</string>
    <string name="yes">Tak</string>
    <string name="cancel">Anuluj</string>
</resources>