<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/Director"
                android:text="@string/Director"
                android:textSize="30sp"
                android:labelFor="@id/DirectorInput"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/DirectorInput"
                android:inputType="textAutoComplete"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/data"
                android:text="@string/date"
                android:textSize="30sp"
                android:labelFor="@id/Movie_DateInput"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Movie_DateInput"
                android:inputType="datetime"
                android:hint="@string/date_hint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/brand"
                android:text="@string/brand"
                android:textSize="30sp"
                android:labelFor="@id/Movie_BrandInput"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Movie_BrandInput"
                android:inputType="textAutoComplete"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>