<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/textView3"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:textSize="20sp"
                android:labelFor="@id/editText2"
                android:text="@string/login"
                android:layout_gravity="start"
                android:gravity="center|bottom"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="start"
                android:gravity="center|bottom"
                android:labelFor="@id/editText"
                android:text="@string/has_o"
                android:textSize="20sp"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="160dp"
                android:layout_height="60dp"
                android:inputType="textPassword" />
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="20dp"
            android:text="@string/zaloguj"
            android:textSize="25sp"
            android:onClick="logIn"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rejestracja"
            android:layout_gravity="center"
            android:textSize="35sp"
            android:onClick="register"/>
    </LinearLayout>

</ScrollView>