<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/author"
                android:text="@string/Author"
                android:textSize="30sp"
                android:labelFor="@id/AuthorInput"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/AuthorInput"
                android:textColor="#1a1100"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/data"
                android:text="@string/date_book"
                android:textSize="30sp"
                android:labelFor="@id/Book_DateInput"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Book_DateInput"
                android:textColor="#1a1100"
                android:textSize="30sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/brand"
                android:text="@string/brand"
                android:textSize="30sp"
                android:labelFor="@id/Book_BrandInput"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Book_BrandInput"
                android:textColor="#1a1100"
                android:textSize="30sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>